# MediaPipeHELL

./: .gitignore  Makefile  README.md  classify_gesture.py  control.md  face_capture.py  gesture_serial.py  iniciar.bat  make.ps1  mod4_routine.json  mod5_grasp_detector.py  pose_capture.py  pyproject.toml  robot_face_landmarks.py  robot_face_state.py  run_face_capture.py  run_module1.py  run_module4.py  run_module5.py  serial_bridge.py  server.py  set_directions.py  tea_object_emotion.py  test_mod4.py  test_pipeline.py  tracking_db.py  visual_feedback_controller.py
.claude/: settings.local.json
web/: index.html  package-lock.json  package.json  readme.md  vite.config.js
web/src/: App.css  App.jsx  Dashboard.jsx  Module5View.jsx  RobotView.jsx
